--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,20 @@
 /*=======================================
     GENERAL STYLES
 ==================================================*/
-
+.deletecomment{
+  font-size: 10px;
+  text-align: top;
+}
+.hr{
+  width: 50%;
+}
+.comments{
+  font-size: 19px;
+}
+.fit{
+  height: 100%;
+  width: 100%;
+}
 body {
           font-family:'Open Sans', sans-serif;
     font-size:14px;
@@ -412,13 +425,46 @@ input[type=submit] {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.container1 {
+  position: relative;
+  width: 70%;
 }
 
+.image1 {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
 
+.overlay1 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #ff1919;
+  overflow: hidden;
+  width: 0;
+  height: 100%;
+  transition: 0.45s ease;
+  border-radius: 8px;
+  
+}
 
+.container1:hover .overlay1 {
+  width: 100%;
+}
 
-
-
-
-
-
+.text1 {
+  word-wrap: break-word;
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  font-family: 'Arial Black';
+}
+}
