--- a/public/css/style.css
+++ b/public/css/style.css
@@ -466,5 +466,6 @@ input[type=submit] {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   font-family: 'Arial Black';
+  text-transform: uppercase;
 }
 }
